--- a/style.css
+++ b/style.css
@@ -4,15 +4,20 @@
     align-items: center;
     justify-content: center;
 }
+h1 {
+    margin-top: 1em;
+    font-size: 25pt;
+}
 table {
+    border: 1px solid #ddd;
     border-collapse: collapse;
     width: 100%;
     margin: 20px 0;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Courier New Bold', Courier, monospace;
 }
 th, td {
     border: 1px solid #ddd;
-    padding: 8px;
+    padding: 5px 10px;
     text-align: left;
 }
 th {
